--- a/index.html
+++ b/index.html
@@ -2,13 +2,111 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cat energy</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <header class="page-header">
+        <nav class="main-nav">
+            <svg class="main-nav__logo"></svg>
+            <ul class="main-nav__menu">
+                <li class="main-nav__menu-item"><a class="main-nav__link" href="#">Главная</a></li>
+                <li class="main-nav__menu-item"><a class="main-nav__link" href="#">Каталог продукции</a></li>
+                <li class="main-nav__menu-item"><a class="main-nav__link" href="#">Подбор программы</a></li>
+            </ul>
+        </nav>
+        <section class="heading">
+            <h1 class="heading__title">Функциональное питание для котов</h1>
+            <p class="heading__description">Занялся собой? Займись котом!</p>
+            <button class="heading__choose-program">Подобрать программу</button>
+            <img class="heading__image" alt="Cat energy PRO курица">
+        </section>
+    </header>
+    <main class="page-main">
+        <section class="select">
+            <h2 class="visually-hidden">Выбор программы</h2>
+            <ul class="select__items">
+                <li class="select__item">
+                    <h3 class="select__title">Похудение</h3>
+                    <p class="select__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                    <a class="select__link">Каталог Slim</a>
+                </li>
+                <li class="select__item">
+                    <h3 class="select__title">Набор массы</h3>
+                    <p class="select__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                    <a class="select__link">Каталог Pro</a>
+                </li>
+            </ul>
+        </section>
+        <section class="how-it-works">
+            <h2 class="how-it-works__title">Как это работает</h2>
+            <ul class="how-it-works__items">
+                <li class="how-it-works__item">
+                    <p class="how-it-works__description">Функциональное питание содержит только полезные питательные вещества.</p>
+                </li>
+                <li class="how-it-works__item">
+                    <p class="how-it-works__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+                </li>
+                <li class="how-it-works__item">
+                    <p class="how-it-works__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+                </li>
+                <li class="how-it-works__item">
+                    <p class="how-it-works__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+                </li>
+            </ul>
+        </section>
+        <section class="example">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+            <ul class="example__items">
+                <li class="example__item">
+                    <fieldset class="example__fieldset">
+                        <p class="example__item-value">5 кг</p>
+                        <legend class="example__item-legend">снижение веса</legend>
+                    </fieldset>
+                </li>
+                <li class="example__item">
+                    <fieldset class="example__fieldset">
+                        <p class="example__item-value">60 дней</p>
+                        <legend class="example__item-legend">затрачено времени</legend>
+                    </fieldset>
+                </li>
+            </ul>
+            <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
+            <div class="example__visualization">
+                <img class="example__image" alt="Кот Борис до и после">
+                <button class="example__before">Было</button>
+                <input class="example__slider" type="range">
+                <button class="example__after">Стало</button>
+            </div>
+        </section>
+        <section class="contacts">
+            <h2 class="visually-hidden">Контакты</h2>
+            <div class="contacts__invitations">
+                <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
+                <p class="contacts__adress">
+                    ул. Большая Конюшенная, д. 19/8
+                    <br>
+                    Санкт-Петербург
+                </p>
+            </div>
+            <img class="contacts__map" alt="Здесь будет карта">
+        </section>
+    </main>
+    <footer class="page-footer">
+        <ul class="page-footer__items">
+            <li class="page-footer__item"></li>
+            <li class="page-footer__item">
+                <ul class="page-footer__socials">
+                    <li class="page-footer__social"><a class="page-footer__social-link">Вконтакте</a></li>
+                    <li class="page-footer__social"><a class="page-footer__social-link">Инстаграм</a></li>
+                    <li class="page-footer__social"><a class="page-footer__social-link">Фейсбук</a></li>
+                </ul>
+            </li>
+            <li class="page-footer__item">HTML Academy</li>
+        </ul>
+    </footer>
 </body>
 </html>
