--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <path d="M80.81,16.53a7.67,7.67,0,0,1-1.08-4.48V6.17a10.94,10.94,0,0,1,.43-3.36,3.79,3.79,0,0,1,1.48-2,5.11,5.11,0,0,1,2.88-.7,4.56,4.56,0,0,1,3.56,1.23,5.85,5.85,0,0,1,1.09,3.89v.65H86.83V5.32a9.54,9.54,0,0,0-.15-1.94,1.66,1.66,0,0,0-.65-1A2.52,2.52,0,0,0,84.56,2,2.2,2.2,0,0,0,83,2.46a2.16,2.16,0,0,0-.65,1.25,11.58,11.58,0,0,0-.15,2.09v6.51a6.25,6.25,0,0,0,.5,2.9,2,2,0,0,0,1.91.88,2,2,0,0,0,1.9-1,6.65,6.65,0,0,0,.52-3.06V10.86H84.78V9.12H89.3v8.71H87.74l-.25-2A3.14,3.14,0,0,1,84.32,18,4,4,0,0,1,80.81,16.53Z"></path>
                     <path d="M94.28,11.62,90.42.24h2.32l2.73,8.49L98.16.24h2.34L96.66,11.62v6.21H94.28Z"></path>
                 </svg>
-                <button class="main-nav__button"><span class="visually-hidden">Меню</span></button>
+                <button class="main-nav__button main-nav__button--open visually-hidden"><span class="visually-hidden">Меню</span></button>
             </div>
             <ul class="main-nav__menu">
                 <li class="main-nav__menu-item"><a class="main-nav__link main-nav__link--active">Главная</a></li>
@@ -303,6 +303,7 @@
             </li>
         </ul>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/main-menu.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
